--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "author": "Lukas Bischof",
   "devDependencies": {
     "eslint": "^4.18.1"
+  },
+  "dependencies": {
+    "chalk": "^2.3.1"
   }
 }
