--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "hashcode-2018",
   "version": "0.1.0",
-  "description": "",
+  "description": "Pizza problem",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lukasbischof/hashcode-2018"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +16,9 @@
     "hashcode"
   ],
   "author": "Lukas Bischof",
+  "license": "MIT",
   "devDependencies": {
+    "ajv": "^6.2.0",
     "eslint": "^4.18.1"
   },
   "dependencies": {
